# fresh-eyes

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
api/: Cargo.toml  Dockerfile
api/src/: app_data.rs  lib.rs  main.rs  server_auth.rs
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
client/: package-lock.json  package.json  puppeteer.ts  script.js  style.css
client/fresheyes-bot/: LICENSE  README.md  app.yml  package-lock.json  package.json  tsconfig.json
client/fresheyes-bot/src/: index.ts  util.ts
client/fresheyes-web/: .env.sample  README.md  next.config.js  package-lock.json  package.json
client/fresheyes-web/src/: middleware.ts
client/fresheyes-web/src/app/: layout.tsx  page.tsx
client/fresheyes-web/src/app/api/auth/[...nextauth]/: options.ts
client/fresheyes-web/src/app/assets/icons/: exitArrow.tsx  logout.tsx
client/fresheyes-web/src/app/components/: button.tsx
client/fresheyes-web/src/app/components/form/: CustomComponents.tsx  FormSection.tsx  bot.ts  proceess-pr.ts
client/fresheyes-web/src/app/components/menu/: Menu.tsx
client/fresheyes-web/src/app/components/modal/: Modal.tsx  SuccessModal.tsx
client/fresheyes-web/src/app/home/: client.tsx  page.tsx
client/fresheyes-web/src/app/hooks/: useGrpcClinet.ts
client/fresheyes-web/src/app/landing/: client.tsx
client/fresheyes-web/src/config/: process.ts
client/fresheyes-web/src/proto/: fresheyes_pb.d.ts  fresheyes_pb.js  fresheyes_pb_service.d.ts  fresheyes_pb_service.js
client/fresheyes-web/src/types/: index.ts  next-auth.d.ts
proto/: fresheyes.proto
src/: lib.rs  main.rs  server.rs  utils.rs
