[package]
name = "fresh_eyes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
clap = "2.33.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.56"
once_cell = "1.8.0"
tokio-stream = {version = "*", features = ["net"]}
futures = "0.3.30"
futures-util = "0.3.30"
actix-web = "4.0.0"
actix-service = "2.0.0"
mockito = "1.4.0"

[dev-dependencies]
futures-util = "*"
anyhow = "*"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
cli = []


